--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,22 @@ body {
 h1 {
   text-align: center;
 }
-a {
+
+p {
+  text-align: center;
+}
+
+.croissant-photo {
+  max-width: 100%;
+  border-radius: 10px;
+  display: block;
+  margin: 30px auto;
+}
+
+footer {
+  text-align: center;
+}
+footer a {
+  margin: 0 10px;
   color: blueviolet;
 }
